# aumos-agent-framework

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md  mkdocs.yml
src/aumos_agent_framework/: __init__.py  main.py  settings.py
src/aumos_agent_framework/adapters/: __init__.py  action_executor.py  agent_runtime.py  circuit_breaker.py  execution_streamer.py  kafka.py  memory_manager.py  multi_agent_coordinator.py  observability_hooks.py  privilege_manager.py  reasoning_engine.py  sandbox_guard.py  security_sandbox.py  session_isolator.py  skill_composer.py  tool_registry.py  trace_repository.py
src/aumos_agent_framework/adapters/durable_execution/: __init__.py  temporal_executor.py
src/aumos_agent_framework/adapters/tools/: __init__.py  registry.py
src/aumos_agent_framework/adapters/tools/ai/: __init__.py  embedding_search.py  image_describe.py  llm_summarize.py
src/aumos_agent_framework/adapters/tools/aumos/: __init__.py  data_pipeline_run.py  workflow_trigger.py
src/aumos_agent_framework/adapters/tools/code/: __init__.py  python_repl.py  shell_command.py
src/aumos_agent_framework/adapters/tools/communication/: __init__.py  email_send.py  slack_message.py  webhook_call.py
src/aumos_agent_framework/adapters/tools/community/: __init__.py  github_pr_review.py  (+2 more)
src/aumos_agent_framework/adapters/workflow_engine/: __init__.py  langgraph_engine.py
src/aumos_agent_framework/api/: __init__.py  router.py  schemas.py
src/aumos_agent_framework/core/: __init__.py  interfaces.py  models.py  services.py
(+12 files in other folders)
